...
    labelKey: 'tabs.home',
    hintKey: 'accessibility.tabs.home_hint',
  },
  {
    route: 'calendar',
    Icon: CalendarIcon,
    testID: 'calendar-tab',
    iconTestID: 'calendar-icon',
    labelKey: 'tabs.calendar',
    hintKey: 'accessibility.tabs.calendar_hint',
  },
  {
    route: 'community',
    Icon: FeedIcon,
    testID: 'community-tab',
    iconTestID: 'community-icon',
    labelKey: 'tabs.community',
    hintKey: 'accessibility.tabs.community_hint',
  },

  {
...
